--- a/playbook.yml
+++ b/playbook.yml
@@ -7,3 +7,21 @@
         - virtualenv
         update_cache: yes
       become: yes
+
+    - name: instalando dependencias com pip (Django e Django Rest)
+      pip:
+        virtualenv: /home/ubuntu/tcc/venv
+        name:
+          - django
+          - djangorestframework
+    
+    - name: iniciando o projeto
+      shell: '. /home/ubuntu/tcc/venv/bin/activate; django-admin startproject setup /home/ubuntu/tcc/'
+      ignore_errors: yes
+    
+    - name: alterando o hosts do settings
+      lineinfile:
+        path: /home/ubuntu/tcc/setup/settings.py
+        regexp: 'ALLOWED_HOSTS'
+        line: 'ALLOWED_HOSTS = ["*"]'
+        backrefs: yes
